--- a/libs/nest-probot/project.json
+++ b/libs/nest-probot/project.json
@@ -31,9 +31,9 @@
     },
     "semantic-release": {
       "executor": "@theunderscorer/nx-semantic-release:semantic-release",
-      "buildTarget": "build",
       "options": {
-        "npm": true
+        "buildTarget": "nest-probot:build",
+        "outputPath": "${WORKSPACE_DIR}/dist/libs/nest-probot"
       }
     }
   }
