--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "prepare": "husky install",
+    "commit": "git add . && cz"
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -61,8 +65,5 @@
   "packageManager": "yarn@4.3.1",
   "nx": {
     "includedScripts": []
-  },
-  "scripts": {
-    "prepare": "husky install"
   }
 }
