--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@octokit/rest": "^21.0.1",
+    "@probot/get-private-key": "^1.1.2",
     "axios": "^1.6.0",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
