--- a/packages/nest-probot/package.json
+++ b/packages/nest-probot/package.json
@@ -2,7 +2,17 @@
   "name": "@hive-o/nest-probot",
   "version": "1.2.4",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "octokit": "^4.0.2",
+    "probot": "^13.3.6",
+    "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
+    "@octokit/rest": "^21.0.1",
+    "@probot/get-private-key": "^1.1.2",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "smee-client": "^2.0.2",
+    "reflect-metadata": "^0.1.13"
   },
   "publishConfig": {
     "access": "public"
