fix(nest-probot): update package.json to switch to cjs

--- a/nx.json
+++ b/nx.json
@@ -44,6 +44,12 @@
         "serveTargetName": "serve",
         "previewTargetName": "preview"
       }
+    },
+    {
+      "plugin": "@nx/rollup/plugin",
+      "options": {
+        "buildTargetName": "build"
+      }
     }
   ],
   "targetDefaults": {
