--- a/package.json
+++ b/package.json
@@ -9,21 +9,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
-    "@octokit/rest": "^21.0.1",
     "@probot/get-private-key": "^1.1.2",
     "axios": "^1.6.0",
     "lodash": "^4.17.21",
-    "nanoid": "^5.0.7",
     "next": "14.2.3",
-    "octokit": "^4.0.2",
-    "probot": "^13.3.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "smee-client": "^2.0.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -38,6 +34,7 @@
     "@nx/nest": "19.5.3",
     "@nx/next": "19.5.3",
     "@nx/node": "19.5.3",
+    "@nx/rollup": "19.5.3",
     "@nx/web": "19.5.3",
     "@nx/webpack": "19.5.3",
     "@nx/workspace": "19.5.3",
@@ -57,6 +54,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "19.5.3",
     "prettier": "^2.6.2",
+    "rollup": "^4.14.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
