--- a/packages/nest-probot/package.json
+++ b/packages/nest-probot/package.json
@@ -3,11 +3,12 @@
   "version": "1.2.5",
   "dependencies": {
     "tslib": "^2.3.0",
-    "octokit": "^4.0.2",
-    "probot": "^13.3.6",
+    "@octokit/auth-app": "^6.0.4",
+    "@octokit/rest": "^20.0.2",
     "lodash": "^4.17.21",
-    "nanoid": "^5.0.7",
-    "@octokit/rest": "^21.0.1",
+    "nanoid": "^3.3.7",
+    "octokit": "^3.2.1",
+    "probot": "^13.3.6",
     "@probot/get-private-key": "^1.1.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
