chore: update deps

--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@octokit/auth-app": "^6.0.4",
+    "@octokit/rest": "^20.0.2",
     "@probot/get-private-key": "^1.1.2",
     "axios": "^1.6.0",
     "lodash": "^4.17.21",
+    "nanoid": "^3.3.7",
     "next": "14.2.3",
+    "octokit": "^3.2.1",
+    "probot": "^13.3.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "smee-client": "^2.0.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
