--- a/packages/nest-probot/package.json
+++ b/packages/nest-probot/package.json
@@ -3,17 +3,17 @@
   "version": "1.2.6",
   "dependencies": {
     "tslib": "^2.3.0",
-    "@octokit/auth-app": "^6.0.4",
-    "@octokit/rest": "^20.0.2",
-    "lodash": "^4.17.21",
-    "nanoid": "^3.3.7",
-    "octokit": "^3.2.1",
-    "probot": "^13.3.6",
-    "@probot/get-private-key": "^1.1.2",
+    "@octokit/webhooks": "12.2.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@probot/get-private-key": "^1.1.2",
+    "@octokit/auth-app": "^6.0.4",
+    "@octokit/rest": "^20.0.2",
     "smee-client": "^2.0.2",
-    "reflect-metadata": "^0.1.13"
+    "probot": "^13.3.6",
+    "octokit": "^3.2.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^3.3.7"
   },
   "publishConfig": {
     "access": "public"
