--- a/.nxreleaserc.json
+++ b/.nxreleaserc.json
@@ -2,7 +2,7 @@
   "changelog": true,
   "npm": true,
   "github": true,
-  "repositoryUrl": "git@github.com:hive-o/toolkit.git",
+  "repositoryUrl": "git@github.com:hive-o/libraries.git",
   "branches": [
     "main"
   ]
