--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@hive-o/nest-probot": ["packages/nest-probot/src/index.ts"]
+      "@hive-o/nest-probot": ["packages/nest-probot/src/index.ts"],
+      "@hive-o/spider": ["packages/nest-probot/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
