--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,14 +11,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: check if files package has changes
+        id: files-changed
+        uses: tj-actions/changed-files@v44
+        with:
+          files: packages/nest-probot/**
+
       - name: configure git
+        if: steps.files-changed.outputs.any_changed == 'true'
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
-      - run: yarn install
-
-      - run: npx nx run nest-probot:semantic-release
+      - if: steps.files-changed.outputs.any_changed == 'true'
+        run: |
+          yarn install
+          npx nx run nest-probot:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -28,14 +36,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: check if files package has changes
+        id: files-changed
+        uses: tj-actions/changed-files@v44
+        with:
+          files: packages/spider/**
+
       - name: configure git
+        if: steps.files-changed.outputs.any_changed == 'true'
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
-      - run: yarn install
-
-      - run: npx nx run spider:semantic-release
+      - if: steps.files-changed.outputs.any_changed == 'true'
+        run: |
+          yarn install
+          npx nx run spider:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
