--- a/packages/nest-probot/package.json
+++ b/packages/nest-probot/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "nanoid": "^3.3.7"
   },
+  "license": "LGPL-3.0-only",
   "publishConfig": {
     "access": "public"
   },
