--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -9,6 +9,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "license": "LGPL-3.0-only",
   "type": "commonjs",
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
