--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,30 @@ on:
       - 'main'
 
 jobs:
-  release:
+  check-component-changed:
     runs-on: ubuntu-latest
+    outputs:
+      files-changed: ${{ steps.files-changed.outputs }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: check if files package has changes
+        id: files-changed
+        uses: tj-actions/changed-files@v44
+        with:
+          files_yaml: |
+            nest-probot:
+              - packages/nest-probot/**
+            spider:
+              - security/spider/**
+            xss:
+              - security/xss/**
+
+  release-nest-probot:
+    runs-on: ubuntu-latest
+    needs:
+      - check-component-changed
+    if: needs.check-component-changed.outputs.nest-probot_any_changed == 'true'
     steps:
       - uses: actions/checkout@v3
 
@@ -19,7 +41,50 @@ jobs:
       - name: release
         run: |
           yarn install
-          npx nx run-many -t semantic-release --parallel=false
+          npx nx run nest-probot:semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release-spider:
+    runs-on: ubuntu-latest
+    needs:
+      - check-component-changed
+    if: needs.check-component-changed.outputs.spider_any_changed == 'true'
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: configure git
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
+      - name: release
+        run: |
+          yarn install
+          npx nx run spider:semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release-xss:
+    runs-on: ubuntu-latest
+    needs:
+      - check-component-changed
+    if: needs.check-component-changed.outputs.xss_any_changed == 'true'
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: configure git
+        if: steps.files-changed.outputs.any_changed == 'true'
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
+      - name: release
+        run: |
+          yarn install
+          npx nx run xss:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
