--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       nest-probot-changed: ${{ steps.files-changed.outputs.nest-probot_any_changed }}
+      web-driver-changed: ${{ steps.files-changed.outputs.web-driver_any_changed }}
       spider-changed: ${{ steps.files-changed.outputs.spider_any_changed }}
       xss-changed: ${{ steps.files-changed.outputs.xss_any_changed }}
     steps:
@@ -22,6 +23,8 @@ jobs:
           files_yaml: |
             nest-probot:
               - packages/nest-probot/**
+            web-driver:
+              - packages/web-driver/**
             spider:
               - security/spider/**
             xss:
@@ -44,6 +47,27 @@ jobs:
         run: |
           yarn install
           npx nx run nest-probot:semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release-web-driver:
+    runs-on: ubuntu-latest
+    needs:
+      - check-component-changed
+    if: needs.check-component-changed.outputs.web-driver-changed == 'true'
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: configure git
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
+      - name: release
+        run: |
+          yarn install
+          npx nx run web-driver:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
