--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-perfectionist": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "19.5.3",
