--- a/packages/web-driver/package.json
+++ b/packages/web-driver/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@hive-o/xss",
-  "version": "1.0.0",
+  "name": "@hive-o/web-driver",
+  "version": "0.0.1",
   "dependencies": {
     "tslib": "^2.3.0",
-    "async": "^3.2.5",
-    "@hive-o/web-driver": "^1.0.0"
+    "puppeteer": "^22.12.1"
   },
   "repository": "https://github.com/hive-o/libraries",
   "publishConfig": {
