--- a/security/spider/package.json
+++ b/security/spider/package.json
@@ -3,7 +3,8 @@
   "version": "1.3.0",
   "dependencies": {
     "tslib": "^2.3.0",
-    "puppeteer": "^22.12.1"
+    "puppeteer": "^22.12.1",
+    "@hive-o/web-driver": "^1.0.0"
   },
   "repository": "https://github.com/hive-o/libraries",
   "publishConfig": {
