--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@hive-o/nest-probot": ["packages/nest-probot/src/index.ts"],
-      "@hive-o/spider": ["security/spider/src/index.ts"]
+      "@hive-o/web-driver": ["packages/web-driver/src/index.ts"],
+      "@hive-o/spider": ["security/spider/src/index.ts"],
+      "@hive-o/xss": ["security/xss/src/index.ts"],
     }
   },
   "exclude": ["node_modules", "tmp"]
