--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,7 @@ jobs:
       - name: release
         run: |
           yarn install
+          npx nx run nest-probot:lint --fix
           npx nx run nest-probot:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -67,6 +68,7 @@ jobs:
       - name: release
         run: |
           yarn install
+          npx nx run web-driver:lint --fix
           npx nx run web-driver:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -76,6 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - check-component-changed
+      - release-web-driver
     if: needs.check-component-changed.outputs.spider-changed == 'true'
     steps:
       - uses: actions/checkout@v3
@@ -88,6 +91,7 @@ jobs:
       - name: release
         run: |
           yarn install
+          npx nx run spider:lint --fix
           npx nx run spider:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -97,6 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - check-component-changed
+      - release-web-driver
     if: needs.check-component-changed.outputs.xss-changed == 'true'
     steps:
       - uses: actions/checkout@v3
@@ -109,6 +114,7 @@ jobs:
       - name: release
         run: |
           yarn install
+          npx nx run xss:lint --fix
           npx nx run xss:semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
