--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nx": "19.5.3",
     "prettier": "^2.6.2",
     "rollup": "^4.14.0",
+    "semantic-release": "^24.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
