--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,35 +6,8 @@ on:
       - 'main'
 
 jobs:
-  check-component-changed:
-    runs-on: ubuntu-latest
-    outputs:
-      nest-probot-changed: ${{ steps.files-changed.outputs.nest-probot_any_changed }}
-      web-driver-changed: ${{ steps.files-changed.outputs.web-driver_any_changed }}
-      spider-changed: ${{ steps.files-changed.outputs.spider_any_changed }}
-      xss-changed: ${{ steps.files-changed.outputs.xss_any_changed }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: check if files package has changes
-        id: files-changed
-        uses: tj-actions/changed-files@v44
-        with:
-          files_yaml: |
-            nest-probot:
-              - packages/nest-probot/**
-            web-driver:
-              - packages/web-driver/**
-            spider:
-              - security/spider/**
-            xss:
-              - security/xss/**
-
   release-nest-probot:
-    runs-on: ubuntu-latest
-    needs:
-      - check-component-changed
-    if: needs.check-component-changed.outputs.nest-probot-changed == 'true'
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
 
@@ -53,10 +26,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   release-web-driver:
-    runs-on: ubuntu-latest
-    needs:
-      - check-component-changed
-    if: needs.check-component-changed.outputs.web-driver-changed == 'true'
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
 
@@ -75,11 +45,9 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   release-spider:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs:
-      - check-component-changed
       - release-web-driver
-    if: needs.check-component-changed.outputs.spider-changed == 'true'
     steps:
       - uses: actions/checkout@v3
 
@@ -98,11 +66,9 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   release-xss:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs:
-      - check-component-changed
       - release-web-driver
-    if: needs.check-component-changed.outputs.xss-changed == 'true'
     steps:
       - uses: actions/checkout@v3
 
